--- a/DataStructureP/nbproject/private/private.properties
+++ b/DataStructureP/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/nouraalmadhi/Library/Application Support/NetBeans/18/build.properties
+user.properties.file=C:\\Users\\lamee\\AppData\\Roaming\\NetBeans\\23\\build.properties
